<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BA781">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group1">

        <TextView
            android:id="@+id/question"
            style="@style/TextSize18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:text="@string/question_add_product"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/addName"
            style="@style/TextSize18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/add_name_product"
            android:textColor="#450101" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addName"
            android:layout_centerHorizontal="true"
            android:text="@string/a_hundred_g"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/proteins"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_alignBaseline="@+id/addProteins"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_proteins"
            android:textColor="#450101" />


        <EditText
            android:id="@+id/addProteins"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/add_proteins_value"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/fats"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/proteins"
            android:layout_alignBaseline="@+id/addFats"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_fats"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/addFats"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addProteins"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/add_fats_value"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/carbo"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fats"
            android:layout_alignBaseline="@+id/addCarbo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_carbohydrates"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/addCarbo"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addFats"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/add_carbohydrates_value"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/calories"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carbo"
            android:layout_alignBaseline="@+id/addCalories"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:text="@string/add_calories"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/addCalories"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addCarbo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/add_calories_value"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/kindSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addCalories"
            android:layout_marginLeft="73dp"
            android:layout_marginRight="67dp"
            android:entries="@array/kind" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kindSpinner"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="67dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/category" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/categorySpinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:background="@drawable/weightbutton"
            android:onClick="addButton"
            android:text="@string/add_AddButton" />
    </RelativeLayout>
</RelativeLayout>
