<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/parent_of_product"
        android:layout_width="412dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:background="#D9ABC6A2"
        android:gravity="top" />

    <TextView
        android:id="@+id/name_of_product"
        style="@style/TextSize18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/parent_of_product"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/black"
        tools:text="Название продукта" />

    <TextView
        android:id="@+id/weight_of_product"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calories_of_product"
        android:layout_alignTop="@+id/parent_of_product"
        android:textColor="#450101"
        tools:text="100" />

    <TextView
        android:id="@+id/weight"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/parent_of_product"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/weight_of_product"
        android:text="@string/list_g"
        android:textColor="#450101" />

    <TextView
        android:id="@+id/id_of_product"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/parent_of_product"
        android:hint="@string/list_hint_of_ID"
        android:paddingStart="5dp"
        android:textSize="10sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/proteins"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:text="@string/list_proteins"
        android:textColor="#450101" />

    <TextView
        android:id="@+id/proteins_of_product"
        style="@style/TextSize16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_marginLeft="-50dp"
        android:layout_toRightOf="@+id/proteins"
        android:textColor="#AD0000"
        tools:text="0" />

    <TextView
        android:id="@+id/fats"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_centerHorizontal="true"
        android:text="@string/list_fats"
        android:textColor="#450101" />

    <TextView
        android:id="@+id/fats_of_product"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/fats"
        android:textColor="#AD0000"
        tools:text="0" />

    <TextView
        android:id="@+id/carbohydrates"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:text="@string/list_carbohydrates"
        android:textColor="#450101" />

    <TextView
        android:id="@+id/carbohydrates_of_product"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parent_of_product"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/carbohydrates"
        android:textColor="#AD0000"
        tools:text="0" />

    <TextView
        android:id="@+id/calories"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/calories_of_product"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/calories_of_product"
        android:text="@string/list_calories"
        android:textColor="#450101" />

    <TextView
        android:id="@+id/calories_of_product"
        style="@style/TextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/proteins"
        android:layout_marginTop="20dp"
        android:textColor="#450101"
        tools:text="0" />
</RelativeLayout>