<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BA781">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group1">


        <TextView
            android:id="@+id/question"
            style="@style/TextSize18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:text="@string/update_question"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/updateName"
            style="@style/TextSize18"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:ellipsize="start"
            android:gravity="center"
            android:textColor="#450101"
            tools:text="Название продукта" />

        <TextView
            android:id="@+id/weight"
            style="@style/TextSize14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateName"
            android:layout_centerHorizontal="true"
            android:text="@string/update_a_hundred_g"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/proteins"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_proteins"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/updateProteins"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_alignBaseline="@+id/proteins"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            tools:text="0" />

        <TextView
            android:id="@+id/fats"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/proteins"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_fats"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/updateFats"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateProteins"
            android:layout_alignBaseline="@+id/fats"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            tools:text="0" />

        <TextView
            android:id="@+id/carbo"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fats"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_carbohydrates"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/updateCarbo"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateFats"
            android:layout_alignBaseline="@+id/carbo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            tools:text="0" />

        <TextView
            android:id="@+id/calories"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carbo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_calories"
            android:textColor="#450101" />

        <EditText
            android:id="@+id/updateCalories"
            style="@style/TextSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCarbo"
            android:layout_alignBaseline="@+id/calories"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            tools:text="0" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_below="@+id/updateCalories"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/weightbutton"
            android:onClick="updateButton"
            android:text="@string/update_updateButton" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/updateButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:background="@drawable/weightbutton"
            android:onClick="deleteButton"
            android:text="@string/delete_deleteButton" />
    </RelativeLayout>
</RelativeLayout>
